@@ -1,12 +1,14 @@
 Package: spgrass6
-Version: 0.6-6
-Date: 2009-05-24
+Version: 0.6-7
+Date: 2009-08-14
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
 Description: Interpreted interface between GRASS 6 geographical 
     information system and R, based on starting R from within the GRASS 
-    environment.
+    environment, or running free-standing R in a temporary GRASS location;
+    the package provides facilities for using all GRASS commands from the 
+    R command line.
 Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.5.26), XML
 SystemRequirements: GRASS (>= 6.3)
 License: GPL (>= 2)
